[package]
name = "modulo-online-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
thiserror = "1.0"
backoff = { version = "0.4", features = ["tokio"] }
